# clawdi

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  LICENSE  README.md  biome.json  docker-compose.test.yml  docker-compose.yml  lefthook.yml  package.json  paseo.json  tsconfig.base.json  turbo.json
backend/: .env.example  .pdm-python  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0b7c2a4e9d10_ai_providers.py  1b50ac3f7b87_add_memories_table.py  2d4b0e9a1c7f_add_xtrace_ingest_queue_metadata.py  2d4c8e1b7a90_clawdi_native_channels.py  3d0b4d7f9a2e_add_skill_chunks.py  4c8f2a1d7e9b_v2_runtime_observation_companion.py  4f7b2d9c8a11_vault_project_attachments.py  5f3a9d2c8e10_hosted_runtime_states.py  62bdb2921f5f_merge_sessions_sharing_permissions_into_.py  672acd66fc7d_add_session_content_hash_and_content_.py  6a6bb7b46a4f_add_memory_search_indexes.py  6dee7134c53f_fk_sessions_environment_id_on_delete_.py  74d1b8e2c9a3_reassign_agent_default_names.py  7ac3349475ec_add_memory_embedding.py  84a75f7f0e2d_add_xtrace_memory_ingests.py  8aa3ff37db5c_merge_bench_fixes_wiki_main_serve_heads.py  8b7d2f1a6c4e_agent_primary_model_provider_pool.py  8fb2d34c9a10_store_channel_agent_tokens.py  91d2c0f4e8a3_preserve_vault_slug_aliases.py  9a6c1f2d8e34_add_hosted_runtime_mitmproxy_pin.py  9f74c827cec3_add_skill_source_repo.py  a1b2c3d4e5f6_add_user_avatar_url.py  a26c40c6965e_principal_aware_users.py  a3d1f2e4b567_add_skill_file_count.py  a6d2f4c8b1e7_harden_v2_runtime_observation_boundary.py  a6d4e2f8c1b3_drop_hosted_runtime_state_app_id.py  a6f0d2c9b8e1_persistent_share_redeem_attempts.py  b0d4e6f8a9c1_add_managed_api_keys.py  (+40 more)
backend/app/: main.py  runtime_entrypoint.py
backend/scripts/: audit_ai_provider_models.py  backfill_session_refs.py  backfill_xtrace_memory.py  check_generated_api.py  chunk_existing_memories.py  debug_xtrace_session_ingest.py  dedupe_resume_chains.py  embed_memories.py  mock_deploy_api.py  reindex_skill_chunks.py  seed_dashboard_dev.py  seed_demo.py  seed_serve_test.py  test_secret_scanner_patterns.py  test_slug_resolver.py  test_wiki_extraction.py  test_wiki_sanitizer.py
backend/tests/: conftest.py  hosted_runtime_fixtures.py  test_accept_auto_mount.py  test_admin_endpoints.py  test_agent_default_name_migration.py  test_agent_endpoints.py  test_agent_project_binding_model.py  test_agent_project_bindings_routes.py  test_agent_v2_runtime_contract_migration.py  test_ai_providers.py  test_api_version_alias.py  test_audit_ai_provider_models.py  test_auth_email_rebind.py  test_auth_jwt_backfill.py  test_auth_keys.py  test_capabilities.py  test_channel_debug_events.py  test_channel_inbox.py  test_channel_workers.py  test_channels.py  test_cli_auth_device_flow.py  test_config.py  test_connectors.py  test_coolify_deploy_runtime.py  test_coolify_runtime_deploy.py  test_dashboard_performance.py  test_database_fixture_contract.py  test_dev_auth_bypass.py  test_discord_fixture_replay.py  test_discord_rate_limiter.py  test_discord_routing.py  test_hosted_runtime_bridge_removal_migration.py  test_hosted_runtime_config_observation_migration.py  test_hosted_runtime_egress_migration.py  test_hosted_runtime_locale_migration.py  test_imessage_credentials.py  test_imessage_routing.py  test_managed_ai_catalog.py  test_managed_runtime_docs_contract.py  test_me_routes.py  (+66 more)
(+1009 files in other folders)
